shared/js/cyph/components/account-menu/account-menu.component.scss
@import '../../../../css/mixins';

:host,
.menu {
	@include transition(all 0.15s ease-out);
}

:host > div:not(.collapsed) {
	.home-list {
		margin-top: 12px;
		margin-bottom: -6px;

		cyph-logo {
			max-width: calc(100% - 48px);
			position: relative;
			left: calc(50% - 4px);

			@include transform(translateX(-50%));
		}
	}
}

:host > div.collapsed {
	img.avatar {
		margin-left: -9px;
	}

	cyph-logo {
		height: 28px;
		width: 28px;
		margin-left: -2px;
	}
}

a.emphasis {
	h3,
	mat-icon {
		font-weight: bold !important;
	}
}

cyph-logo {
	height: 2.5em;
}

.avatar-list .username {
	opacity: 0.75;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.cover-image {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 150px;

	&.hidden {
		@include filter(brightness(0) invert(1) brightness(0.25));
	}
}

cyph-account-notification-center,
.context-menu {
	position: absolute;
	top: 8px;
	z-index: 10;
}

cyph-account-notification-center {
	right: 4px;
}

.context-menu {
	left: 2px;
}

cyph-account-notification-center ::ng-deep .menu-button,
.context-menu,
.avatar-list {
	&,
	* {
		color: #eeecf1;
	}
}

.menu {
	width: calc(100% + 4px) !important;
	max-width: calc(100% + 4px) !important;
	min-width: calc(100% + 4px) !important;
	margin-left: -2px !important;
	box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.2),
		0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12);

	&,
	.menu-toggle {
		padding: 0;
	}
}

.menu-toggle {
	position: absolute;
	top: 0;
	right: -2px;
	height: 100%;
	z-index: 1;

	mat-icon {
		margin-left: -4px;
	}
}

mat-divider {
	height: 2px;
}

.appointment-list-item {
	padding: 8px;
	text-decoration: underline;
	text-align: center;
}

.upcoming-appointments {
	text-align: center;
}

.collapsed {
	.upcoming-appointments {
		font-size: 0.85em;
	}

	::ng-deep .mat-list-item .mat-list-item-content {
		position: relative;
		left: 12px;
	}
}

.status {
	/* Disable statuses for now */
	visibility: hidden;

	right: 25px;
	position: absolute;
	width: 80px;
	text-align: right;

	::ng-deep {
		.mat-select-value-text span {
			color: rgba(244, 244, 244, 0.5);
			font-style: italic;
			padding-right: 3.5px;
		}

		.mat-select-arrow {
			color: rgba(255, 255, 255, 0.54) !important;
		}
	}
}

